# Qi_Baishi

./: .gitignore  LICENSE  README.md
.github/workflows/: build-installers.yml
Templete/: README.md  _index.json
Templete/Copywriting/EchoWang风/: info.json  prompt.md  sample.md
Templete/Copywriting/古文观止/: info.json  prompt.md  sample.md
Templete/Copywriting/品牌故事/: info.json  prompt.md  sample.md
Templete/Copywriting/商业文案/: info.json  prompt.md  sample.md
Templete/Copywriting/学术论文/: info.json  prompt.md  sample.md
Templete/Copywriting/广告金句/: info.json  prompt.md  sample.md
Templete/Copywriting/张爱玲风/: info.json  prompt.md  sample.md
Templete/Copywriting/李白风/: info.json  prompt.md  sample.md
Templete/Copywriting/标题党/: info.json  prompt.md  sample.md
docs/: AGENT.md  Developer.md  RELEASE.md  TROUBLESHOOTING.md  vibecoding_log.md
docs/DEVELOPER/: front.md  front_style.md  server.md
front/: index.html  index.html.artifact.json
front/css/: app-chrome.css  auth.css  copywriting.css  gallery.css  history.css  ink-wash.css  landing.css  page-loader.css  presets.css  settings.css  text-to-image.css
front/js/: api-client.js  auth.js  baishi-shared.js  copywriting.js  gallery.js  history.js  image-to-image.js  multi-image.js  page-loader.js  presets.js  settings.js  text-styles.js  text-to-image.js  workspace.js
front/pages/: auth.html  auth.html.artifact.json  copywriting.html  copywriting.html.artifact.json  history.html  history.html.artifact.json  image-to-image.html  image-to-image.html.artifact.json  multi-image.html  multi-image.html.artifact.json  presets.html  presets.html.artifact.json  settings.html  settings.html.artifact.json  text-to-image.html  text-to-image.html.artifact.json  workspace.html  workspace.html.artifact.json
src-tauri/: API.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs  server_http.rs  types.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/inference/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/storage/: mod.rs
(+68 files in other folders)
